sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:12: error: not found: value i
    var v = getValeur(i)
                      ^